Bug 276451 - RenderLayer::collectLayers uses compositing state which isn't valid yet
Summary: RenderLayer::collectLayers uses compositing state which isn't valid yet
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Layout and Rendering (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Matt Woodrow
URL:
Keywords: InRadar
: 250283 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-07-10 15:01 PDT by Matt Woodrow
Modified: 2024-07-24 12:43 PDT (History)
5 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Matt Woodrow 2024-07-10 15:01:02 PDT
RenderLayer::collectLayers decides whether to include layers inside visibility:hidden based on `compositor().usesCompositing()`, which isn't (guaranteed to be) computed until after compositing layers have been decided.

If the compositing state does change, nothing invalidates the RenderLayer z-order lists, so we can remain in this unexpected state.
Comment 1 Radar WebKit Bug Importer 2024-07-10 15:01:21 PDT
<rdar://problem/131491132>
Comment 2 Matt Woodrow 2024-07-10 15:08:46 PDT
Pull request: https://github.com/WebKit/WebKit/pull/30666
Comment 3 Ahmad Saleem 2024-07-12 13:04:10 PDT
*** Bug 250283 has been marked as a duplicate of this bug. ***
Comment 4 EWS 2024-07-12 13:18:03 PDT
Committed 280917@main (4599e0a66d9d): <https://commits.webkit.org/280917@main>

Reviewed commits have been landed. Closing PR #30666 and removing active labels.
Comment 5 EWS 2024-07-24 12:43:51 PDT
Committed 280938.113@safari-7619-branch (d2b834fc70aa): <https://commits.webkit.org/280938.113@safari-7619-branch>

Reviewed commits have been landed. Closing PR #1480 and removing active labels.