RenderLayer::collectLayers uses compositing state which isn't valid yet. https://bugs.webkit.org/show_bug.cgi?id=276451 <rdar://131491132>

Reviewed by Simon Fraser.

RenderLayer::collectLayers decides whether to include layers inside
visibility:hidden based on `compositor().usesCompositing()`, which isn't
(guaranteed to be) computed until after compositing layers have been decided.

If the compositing state does change, nothing invalidates the RenderLayer
z-order lists, so we can remain in this unexpected state.

A fix to the z-order list invalidation bug (so that all visibility:hidden subtrees
get included when we are compositing) is a large speedometer regression.

This instead adds new state to RenderLayer which marks if the layer is intrinsically
composited, which is determined from style (and thus before collectLayers). It
gets update in the same way as existing bits on RenderLayers with ancestor dirty
flags and updateDescendantDependantLayers.

It then changes collectLayers to include visibility:hidden subtrees that contain
an intrinsically composited layer (to make sure we have layers for video etc),
but continue to exclude subtrees that can be ignored.

* LayoutTests/compositing/visibility/visibility-image-layers-dynamic-composited-expected.txt: Added.
* LayoutTests/compositing/visibility/visibility-image-layers-dynamic-composited.html: Added.
* Source/WebCore/rendering/RenderLayer.cpp:
(WebCore::RenderLayer::rebuildZOrderLists):
(WebCore::RenderLayer::collectLayers):
(WebCore::RenderLayer::setIntrinsicallyComposited):
(WebCore::RenderLayer::updateAncestorChainHasIntrinsicallyCompositedDescendants):
(WebCore::RenderLayer::dirtyAncestorChainHasIntrinsicallyCompositedDescendants):
(WebCore::RenderLayer::updateDescendantDependentFlags):
* Source/WebCore/rendering/RenderLayer.h:
* Source/WebCore/rendering/RenderLayerCompositor.cpp:
(WebCore::RenderLayerCompositor::layerStyleChanged):
(WebCore::RenderLayerCompositor::requiresCompositingLayer const):
* Source/WebCore/rendering/RenderLayerCompositor.h:

Canonical link: https://commits.webkit.org/280917@main